# aiProof

./: .env.example  .gitignore  README.md  pyproject.toml
courseX/: run_agent.py
courseX/.claude/: CLAUDE.md
courseX/todo/: course_information.json  course_tasks.json
examples/: system_prompt.py
scripts/: pdf_restructure.py
src/aiStudent/: __init__.py  agent.py
src/claude_agent_sdk/: __init__.py  client.py
