[project]
name = "ai-student"
version = "0.1.0"
description = "Autonomous agent for completing course tasks using Claude SDK"
requires-python = ">=3.10"
readme = "README.md"

[project.scripts]
ai-student = "aiStudent.agent:main"

dependencies = [
    # SDK dependencies (required for src/claude_agent_sdk/)
    "anyio>=4.0.0",
    "typing_extensions>=4.0.0; python_version<'3.11'",
    "mcp>=0.1.0",
    # PDF processing script dependencies
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.3.0",
    "pypdf>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "PTH", # flake8-use-pathlib
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["claude_agent_sdk", "aiStudent"]
